<resources>
    <string name="app_name">绿地资产盘点</string>
    <string name="xiaoxi">消息</string>
    <string name="pandian">盘点</string>
    <string name="asset">查询</string>
    <string name="code">编号:</string>
    <string name="fqr">发起人:</string>
    <string name="fqsj">发起时间:</string>
    <string name="download">资料下载</string>
    <string name="assetprefer">资产查询</string>
    <string name="endcheck">结束盘点</string>
    <string name="up">资料上传</string>
    <string name="xiangqing">详情</string>
    <string name="assetinformation_list_item_user">使用人：</string>
    <string name="assetinformation_list_item_assettype">资产分类：</string>
    <string name="assetinformation_list_item_spex">规格型号：</string>
    <string name="assetinformation_list_item_unit">计量单位：</string>
    <string name="assetinformation_list_item_department">所属部门：</string>
    <string name="assetinformation_list_item_savelocation">存放地点：</string>
    <string name="assetinformation_list_item_uselocation">使用地点：</string>
    <string name="assetinformation_list_item_pdsj">盘点时间：</string>
    <string name="assetinformation_list_item_pdstatus">终端盘点</string>
    <string name="assetinformation_list_item_assetname">资产名称：</string>
    <string name="assetinformation_list_item_assetmark">资产编码：</string>
</resources>
