<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:orientation="horizontal">-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_marginRight="3dp"-->
    <!--android:layout_marginTop="3dp"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/assetinformation_list_item_headtextsizeandwidth"
            android:text="@string/assetinformation_list_item_assetname" />

        <TextView
            android:id="@+id/assetinformation_text_assetname"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:text="笔记本"
            android:textSize="18dp" />

        <!--<TextView-->
        <!--android:id="@+id/assetinformation_text_status"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:textColor="@color/colorWhite"-->
        <!--android:textSize="18dp"-->
        <!--android:gravity="center"-->
        <!--android:text="终端盘点" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            style="@style/assetinformation_list_item_headtextsizeandwidth"
            android:text="资产编码：" />

        <TextView
            android:id="@+id/assetinformation_text_assetcode"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:text="121212121212"
            android:textSize="18dp" />
    </LinearLayout>
    <!--</LinearLayout>-->
    <!--<ImageView-->
    <!--android:id="@+id/assetinformation_image"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_marginTop="2dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginBottom="3dp"-->
    <!--android:layout_height="match_parent" />-->
    <!--</LinearLayout>-->
    <TextView style="@style/xiahuaxian_center" />

    <LinearLayout style="@style/assetinformation_list_item_layout">

        <TextView
            style="@style/assetinformation_list_item_usertextsizeandwidth"
            android:text="@string/assetinformation_list_item_user" />

        <TextView
            android:id="@+id/assetinformation_text_usename"
            style="@style/assetinformation_list_item_editusertextsizeandwidth"
            android:text="李玲的JFK打飞机打飞机的反馈" />

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_assettype" />

        <TextView
            android:id="@+id/assetinformation_text_assettype"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="5"
            android:text="办公用品" />
    </LinearLayout>

    <TextView style="@style/xiahuaxian_center" />

    <LinearLayout style="@style/assetinformation_list_item_layout">

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_spex" />

        <TextView
            android:id="@+id/assetinformation_text_assetspex"
            style="@style/assetinformation_list_item_edittextsizeandwidth"
            android:text="戴尔" />

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_unit" />

        <TextView
            android:id="@+id/assetinformation_text_unit"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="14"
            android:text="个" />
    </LinearLayout>

    <TextView style="@style/xiahuaxian_center" />

    <LinearLayout style="@style/assetinformation_list_item_layout">

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_department" />

        <TextView
            android:id="@+id/assetinformation_text_belongdepartment"
            style="@style/assetinformation_list_item_edittextsizeandwidth"
            android:text="财务部" />

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_savelocation" />

        <TextView
            android:id="@+id/assetinformation_text_savelocation"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="3"
            android:text="成都天府新区" />
    </LinearLayout>

    <TextView style="@style/xiahuaxian_center" />

    <LinearLayout style="@style/assetinformation_list_item_layout">

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_uselocation" />

        <TextView
            android:id="@+id/assetinformation_text_uselocation"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="18"
            android:text="成都天府新区的幅度幅度" />

    </LinearLayout>

    <TextView style="@style/xiahuaxian_bottom" />
</LinearLayout>
