<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/assetpand_top_bar"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/assetpand_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/xiaoxi"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/assetpand_bakc"
            style="@style/back_button" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:text="发起人:" />

        <TextView
            android:id="@+id/assetpand_text_fqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:text="小雪" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:gravity="right"
            android:text="发起时间:" />

        <TextView
            android:id="@+id/assetpand_text_fqsj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:text="2017-12-31" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:text="盘点进度:" />

        <TextView
            android:id="@+id/assetpand_text_jdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@drawable/shape_jdt"
            android:text="2333/2333" />

        <TextView
            android:id="@+id/assetpand_text_pdsj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="18dp"
            android:text="2017-12-30--2017-12-31" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorgray"
        android:layout_height="wrap_content">
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:orientation="horizontal">-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_marginRight="3dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:orientation="vertical">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                   style="@style/assetinformation_list_item_headtextsizeandwidth"
                    android:text="@string/assetinformation_list_item_assetname" />

                <TextView
                    android:id="@+id/assetpand_text_assetname"
                   style="@style/assetinformation_list_item_textsizeandwidthwrap"
                    android:textSize="18dp"
                    android:text="笔记本" />

                <!--<TextView-->
                    <!--android:id="@+id/assetpand_text_status"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:textColor="@color/colorgray"-->
                    <!--android:textSize="18dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="终端盘点" />-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content">
                <TextView
                  style="@style/assetinformation_list_item_headtextsizeandwidth"
                    android:text="@string/assetinformation_list_item_assetmark" />
                <TextView
                    android:id="@+id/assetpand_text_assetcode"
                  style="@style/assetinformation_list_item_textsizeandwidthwrap"
                    android:layout_weight="4"
                    android:textSize="18dp"
                    android:text="121212121212" />
            </LinearLayout>
        <!--</LinearLayout>-->
        <!--<ImageView-->
            <!--android:id="@+id/assetpand_image"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginBottom="3dp"-->
            <!--android:layout_height="match_parent" />-->
    <!--</LinearLayout>-->
    <TextView
        style="@style/xiahuaxian_center" />

    <LinearLayout
        style="@style/assetinformation_list_item_layout">

        <TextView
            style="@style/assetinformation_list_item_usertextsizeandwidth"
            android:text="@string/assetinformation_list_item_user" />

        <TextView
            android:id="@+id/assetpand_text_usename"
            style="@style/assetinformation_list_item_editusertextsizeandwidth"
            android:text="李玲" />

        <TextView
           style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_assettype" />

        <TextView
            android:id="@+id/assetpand_text_assettype"
           style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="5"
            android:text="办公用品" />
    </LinearLayout>
    <TextView
       style="@style/xiahuaxian_center"/>
    <LinearLayout
       style="@style/assetinformation_list_item_layout">

        <TextView
          style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_spex" />

        <TextView
            android:id="@+id/assetpand_text_assetspex"
           style="@style/assetinformation_list_item_edittextsizeandwidth"
            android:text="戴尔" />

        <TextView
           style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_unit" />

        <TextView
            android:id="@+id/assetpand_text_unit"
          style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="14"
            android:text="个" />
    </LinearLayout>
    <TextView
       style="@style/xiahuaxian_center" />
    <LinearLayout
        style="@style/assetinformation_list_item_layout">

        <TextView
          style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_department" />

        <TextView
            android:id="@+id/assetpand_text_belongdepartment"
           style="@style/assetinformation_list_item_edittextsizeandwidth"
            android:text="财务部" />

        <TextView
            style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_savelocation" />

        <TextView
            android:id="@+id/assetpand_text_savelocation"
          style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="3"
            android:text="成都天府新区" />
    </LinearLayout>
    <TextView
        style="@style/xiahuaxian_center"/>
    <LinearLayout
       style="@style/assetinformation_list_item_layout">

        <TextView
           style="@style/assetinformation_list_item_textsizeandwidth"
            android:text="@string/assetinformation_list_item_uselocation" />

        <TextView
            android:id="@+id/assetpand_text_uselocation"
            style="@style/assetinformation_list_item_textsizeandwidthwrap"
            android:layout_weight="18"
            android:text="成都天府新区的幅度幅度" />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:gravity="right"
            android:text="盘点方式：" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:text="终端盘点" />

        <TextView
            android:id="@+id/assetpand_pandstatus_hand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:text="手动报损" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="120dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/assetpand_showview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:background="@mipmap/addcamar" />
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/assetpand_surebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_surebutton"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="确定" />
</LinearLayout>
</LinearLayout>
