<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/checkphoto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@mipmap/xiaoxi_check"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/code" />

            <TextView
                android:id="@+id/xiaoxi_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fqr" />

            <TextView
                android:id="@+id/xiaoxi_fqr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fqsj" />

            <TextView
                android:id="@+id/xiaoxi_fqsj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/xiaoxi_satus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="抽盘" />

            <TextView
                android:id="@+id/xiaoxi_jdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_jdt"
                android:gravity="center"
                android:layout_marginRight="4dp"
                android:text="36/100" />

            <TextView
                android:id="@+id/xiaoxi_pdsj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="2017-12-21--2017-12-31" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
